# kom

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
backend/: Cargo.toml
backend/frontend/: index.html
backend/src/: flux.rs  main.rs  types.rs
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: ContentRoot.tsx  HeaderRoot.tsx  KomRoot.tsx  main.tsx
frontend/src/api/: hourly.tsx  index.tsx  monthly.tsx  normalise.tsx  past.tsx  today.tsx  types.tsx  useApi.tsx
frontend/src/common/: HourlyTable.tsx  InlineIcon.tsx  Loading.tsx  UvIndex.tsx  WeatherType.tsx  WindDirection.tsx
frontend/src/pasttab/: index.tsx
frontend/src/statstab/: ColourTableCell.tsx  index.tsx
frontend/src/todaytab/: CurrentCard.tsx  OverviewCard.tsx  TemperatureCard.tsx  TodayCard.tsx  index.tsx
frontend/src/util/: derive.tsx  index.tsx
