[package]
name = "kom"
version = "1.0.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sunrise = "2.1.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "serde"] }