[package]
name = "kom"
version = "1.0.1"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2.0"
num-traits = "0.2.19"
sunrise = "2.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "serde"] }